# zbd-web-scraper

./: .dockerignore  .env.docker.example  .env.example  .env.old  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README.zh-CN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.serena/: project.yml
docker/: init-db.sql
docs/: API.md  DEPLOY.md  股东股权变更批复数据结构-0630.xlsx
docs/superpowers/plans/: 2026-06-24-nfra-snapshot-crawler.md  2026-06-25-nfra-djg-data-extractor.md  2026-06-25-nfra-itemid-4291.md  2026-06-25-nfra-scheduling.md  2026-06-26-linux-docker-deploy.md  2026-06-26-nfra-djg-data-query.md  2026-07-01-djg-data-publish-date.md  2026-07-02-nfra-capital-change.md  2026-07-03-nfra-equity-change-and-capital-api.md  2026-07-08-doc-sync.md  2026-07-13-nfra-djg-route-rename.md  2026-07-15-proxy-pool-plan.md  2026-07-17-nfra-publish-date-sort.md
docs/superpowers/specs/: 2026-06-24-nfra-snapshot-crawler-design.md  2026-06-25-nfra-djg-data-extractor-design.md  2026-06-25-nfra-itemid-4291-design.md  2026-06-25-nfra-scheduling-design.md  2026-06-26-linux-docker-deploy-design.md  2026-06-26-nfra-djg-data-query-design.md  2026-07-02-nfra-capital-change-design.md  2026-07-08-doc-sync-design.md  2026-07-13-nfra-djg-route-rename-design.md  2026-07-15-proxy-pool-design.md  2026-07-16-nfra-crawl-range-params-design.md  2026-07-17-nfra-publish-date-sort-design.md
migrations/: env.py
scripts/: crawl_nfra.py  crawl_nfra_capital.py  crawl_nfra_equity.py  debug_capital_extraction.py  parse_single_doc.py  seed_spiders.py  test_detail_proxy.py  test_proxy.py
src/web_scraper_service/: __init__.py  config.py  main.py
src/web_scraper_service/api/: deps.py  middleware.py  response.py
src/web_scraper_service/core/: exceptions.py  logging.py  metrics.py
tests/: conftest.py  test_main.py
tests/test_api/: test_health.py  test_nfra.py
tests/test_nfra/: test_capital_change_storage.py  test_capital_crawler.py  test_capital_extractor.py  test_djg_data_storage.py  test_equity_change_storage.py  test_equity_crawler.py  test_equity_extractor.py  test_extractor.py  test_parse.py
tests/test_spiders/: test_registry.py
(+37 files in other folders)
